// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should render correctly with status - DANGEROUS 1`] = `
<span
  className="stncl__status stncl__status--dangerous"
>
  Dangerous
</span>
`;

exports[`it should render correctly with status - READY 1`] = `
<span
  className="stncl__status stncl__status--ready"
>
  Ready
</span>
`;

exports[`it should render correctly with status - WIP 1`] = `
<span
  className="stncl__status stncl__status--wip"
>
  Work in progress
</span>
`;

exports[`it should render null without a status 1`] = `null`;
